Add cli tool to generate a corrections file for a specified acquisition in the logsheet

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.10"
 
 [tool.poetry.scripts]
 ecotaxa-metadata-edit = 'ecotaxa_export_metadata.cli:main'
+logsheet-corrections-generate = 'logsheet.cli:main'
 
 
 [build-system]
